--- a/css/tools/_variables.scss
+++ b/css/tools/_variables.scss
@@ -47,3 +47,6 @@ $font-size-base: 14px !default;
 $icon-size: (
   'default': 24px
 ) !default;
+
+
+$navbar-height: 64px !default;
